--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Raleway&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@900&display=swap");
 
 $lightBlue: #76c7cd;
 $lightBlue2: #b9e0e3;
@@ -9,8 +9,16 @@ body {
   font-family: "Indie Flower", cursive;
   line-height: 1;
   background: rgba(251, 214, 161, 0.8);
+  background: rgba(255, 183, 53, 0.8);
 }
 
+.logo {
+  font-size: 1rem;
+  font-family: "Poppins", sans-serif;
+  text-transform: uppercase;
+  padding: 1.5rem;
+  text-align: right;
+}
 .container {
   margin-top: 1em;
   max-width: 900px;
@@ -59,7 +67,7 @@ body {
   width: 80vw;
   height: 80vw;
   border-radius: 50%;
-  background: #ffefd5;
+  background: rgba(255, 255, 255, 0.4);
   left: -20vw;
   top: -10vw;
 }
@@ -76,7 +84,7 @@ body {
 
 .baby {
   position: fixed;
-  left: 33vw;
+  left: 40vw;
   bottom: 1vh;
   margin: auto;
 }
@@ -99,9 +107,12 @@ body {
 }
 
 @media screen and (max-width: 600px) {
+  .logo {
+    padding: 1em;
+  }
   .container {
     max-width: 90vw;
-    margin: 0 auto;
+    margin: 1em auto;
     overflow: hidden;
   }
   .weekCounter,
@@ -120,16 +131,22 @@ body {
       font-size: 2rem;
     }
   }
-
+  .circle {
+    width: 130vw;
+    height: 120vw;
+    background: #ffefd5;
+    left: -38vw;
+    top: 10vw;
+  }
   .fruits {
-    width: 100vw;
-    left: 35vw;
-    bottom: -20vw;
+    width: 130vw;
+    left: 20vw;
+    bottom: 0;
   }
 
   .ruler {
     width: 95vw;
-    top: 90vh;
+    top: 80vh;
   }
 
   .ruler p {
