--- a/src/App.scss
+++ b/src/App.scss
@@ -147,11 +147,12 @@ body {
   .ruler {
     width: 95vw;
     top: 80vh;
+
+    p {
+      font-size: 1.5rem;
+    }
   }
 
-  .ruler p {
-    display: none;
-  }
   .baby {
     display: none;
   }
