--- a/src/App.scss
+++ b/src/App.scss
@@ -8,8 +8,10 @@ body {
   font-size: 1rem;
   font-family: "Indie Flower", cursive;
   line-height: 1;
-  background: rgba(251, 214, 161, 0.8);
-  background: rgba(255, 183, 53, 0.8);
+  // background: rgba(251, 214, 161, 0.8);
+  // background: rgba(255, 183, 53, 0.8);
+  background: rgba(216, 174, 255, 0.8);
+  background: rgba(159, 87, 255, 0.3);
 }
 
 .logo {
@@ -67,7 +69,7 @@ body {
   width: 80vw;
   height: 80vw;
   border-radius: 50%;
-  background: rgba(255, 255, 255, 0.4);
+  background: #ffefd5;
   left: -20vw;
   top: -10vw;
 }
@@ -104,6 +106,12 @@ body {
     width: 100%;
     opacity: 1;
   }
+}
+
+.born-box {
+  font-size: 2.5rem;
+  padding: 0 2em;
+  max-width: 80vw;
 }
 
 @media screen and (max-width: 600px) {
@@ -155,5 +163,10 @@ body {
 
   .baby {
     display: none;
+  }
+
+  .born-box {
+    padding: 0;
+    max-width: 100vw;
   }
 }
