--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,183 @@
+@import url("https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@900&display=swap");
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+body {
+  font-size: 1rem;
+  font-family: "Indie Flower", cursive;
+  line-height: 1;
+  background: rgba(251, 214, 161, 0.8);
+  background: rgba(255, 183, 53, 0.8);
+  background: rgba(216, 174, 255, 0.8);
+  background: rgba(159, 87, 255, 0.3);
+}
+
+.logo {
+  font-size: 1rem;
+  font-family: "Poppins", sans-serif;
+  text-transform: uppercase;
+  padding: 1.5rem;
+  text-align: right;
+}
+.container {
+  margin-top: 1em;
+  max-width: 900px;
+}
+
+.weekCounter {
+  font-size: 4rem;
+  display: flex;
+  align-items: flex-end;
+
+  span {
+    font-size: 14rem;
+    padding: 0 2rem;
+  }
+}
+.countdown {
+  display: flex;
+  align-items: flex-end;
+  justify-content: flex-end;
+  font-size: 4rem;
+
+  p {
+    text-align: right;
+  }
+
+  span {
+    font-size: 14rem;
+    padding: 0 2rem;
+  }
+}
+
+.days {
+  font-size: 3rem;
+  max-width: 450px;
+  padding-left: 2em;
+
+  span {
+    padding: 0 10px;
+    font-weight: 600;
+  }
+}
+
+.circle {
+  position: fixed;
+  z-index: -1;
+  width: 80vw;
+  height: 80vw;
+  border-radius: 50%;
+  background: #ffefd5;
+  left: -20vw;
+  top: -10vw;
+}
+
+.fruits {
+  position: fixed;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 80vw;
+  width: 80vw;
+  left: 50vw;
+  bottom: -30vw;
+}
+
+.baby {
+  position: fixed;
+  left: 40vw;
+  bottom: 1vh;
+  margin: auto;
+}
+
+.ruler {
+  position: fixed;
+  top: 35vh;
+  right: 1vw;
+  width: 30vw;
+  p {
+    font-size: 3rem;
+    margin: 0;
+    padding-left: 1rem;
+  }
+
+  img {
+    width: 100%;
+    opacity: 1;
+  }
+}
+
+.born-box {
+  font-size: 2.5rem;
+  padding: 0 2em;
+  max-width: 80vw;
+}
+
+@media screen and (max-width: 600px) {
+  .logo {
+    padding: 1em;
+  }
+  .container {
+    max-width: 90vw;
+    margin: 1em auto;
+    overflow: hidden;
+  }
+  .weekCounter,
+  .countdown,
+  .days {
+    font-size: 2rem;
+    span {
+      font-size: 8rem;
+    }
+  }
+  .days {
+    padding-left: 0;
+
+    span {
+      font-weight: 600;
+      font-size: 2rem;
+    }
+  }
+  .circle {
+    width: 130vw;
+    height: 120vw;
+    background: #ffefd5;
+    left: -38vw;
+    top: 10vw;
+  }
+  .fruits {
+    width: 130vw;
+    left: 20vw;
+    bottom: 0;
+  }
+
+  .ruler {
+    width: 95vw;
+    top: 80vh;
+
+    p {
+      font-size: 1.5rem;
+    }
+  }
+
+  .baby {
+    display: none;
+  }
+
+  .born-box {
+    padding: 0;
+    max-width: 100vw;
+  }
 }
